--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,8 @@
   "name": "Purpose",
   "description": "Better, simpler website blocker to help you use the web with purpose",
   "version": "1.0",
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+  "background": {
+    "scripts": ["background.js"]
   },
   "permissions": [
     "tabs"
