--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,11 @@
   },
   "permissions": [
     "tabs"
-  ]
+  ],
+  "browser_action": {
+    "default_icon": "assets/purpose.png"
+  },
+  "icons": {
+    "700": "assets/purpose.png"
+  }
 }
