Standardized events and re-enabled blocking.

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   },
   "background": {
     "scripts": [
+      "models/events.js",
       "models/catcher.js",
       "models/catchers_provider.js",
       "models/visit_intent.js",
