--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "version": "0.3",
 
   "browser_action": {
-    "default_icon": "assets/purpose.png"
+    "default_icon": "assets/purpose.png",
+    "default_popup": "popup/index.html"
   },
   "background": {
     "scripts": [
