--- a/manifest.json
+++ b/manifest.json
@@ -30,5 +30,6 @@
   "permissions": [
     "storage",
     "tabs"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
