--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,8 @@
   },
   "background": {
     "scripts": [
+      "libs/raven.min.js",
+      "base/config_raven.js",
       "models/events.js",
       "models/catcher.js",
       "models/catchers_provider.js",
@@ -28,5 +30,6 @@
   "permissions": [
     "storage",
     "tabs"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
